--- a/style.css
+++ b/style.css
@@ -299,3 +299,9 @@ h2 {
 .timer {
   font-weight: 600;
 }
+@media screen and (max-width: 676px) {
+ .app {
+    display: flex;
+    flex-direction: column;
+  }
+}
